--- a/index.html
+++ b/index.html
@@ -7,27 +7,17 @@
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/bezier-easing@2.1.0/dist/bezier-easing.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bezier-easing@2.1.0/dist/bezier-easing.min.js"></script>
   <script src="anime.js"></script>
+  <script defer src="script.js"></script>
 </head>
 
 <body>
   <button>button</button>
-  <div id="wrap">
-    <div id="box"></div>
-  </div>
 
-  <script>
-    const btn = document.querySelector('button');
-    const box = document.querySelector('#box');
-
-    btn.addEventListener('click', () => {
-      new Anime(box, { top: 200, left: '50%', background: '#c92b99', opacity: 0.4, }, {
-        duration: 1000,
-        easeType: 'ease1'
-      });
-
-    });
-  </script>
+  <section>
+    <article></article>
+  </section>
 </body>
 
 </html>
