--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
 </head>
 
 <body>
-  <button>button</button>
-  <h1>ANIMATION</h1>
-
-  <section>
-    <article></article>
-  </section>
+  <nav>
+    <button>to top</button>
+    <button>to 2000px</button>
+    <button>to 4000px</button>
+  </nav>
 </body>
 
 </html>
